Atividade Java dia 22/05

--- a/Estacionamento/nbproject/project.properties
+++ b/Estacionamento/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=aula1004
-application.vendor=CAMARGO
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,17 +28,16 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/aula1004.jar
+dist.jar=${dist.dir}/Estacionamento.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/aula1004
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/Estacionamento
 excludes=
-file.reference.Desktop-mysql-connector-java-5.1.18.tar=C:\\Users\\CAMARGO\\Desktop\\mysql-connector-java-5.1.18.tar
+file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\CAMARGO\\Desktop\\mysql-connector-j-8.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Desktop-mysql-connector-java-5.1.18.tar}
+    ${file.reference.mysql-connector-j-8.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=aula1004
-main.class=aula1004.Aula1004
+jlink.launcher.name=Estacionamento
+main.class=estacionamento.Estacionamento
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
