--- a/aula1004/nbproject/private/private.properties
+++ b/aula1004/nbproject/private/private.properties
@@ -2,6 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.Desktop-mysql-connector-java-5.1.18.tar=C:\\Users\\CAMARGO\\Desktop\\mysql-connector-j-8.4.0.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
